fixed styling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,9 @@
 .form-group {
   margin-top: 30px !important;
 }
+
+@media only screen and (max-width: 992px) {
+nav .brand-logo {
+  left: 25% !important;
+}
+}
